Bug 1674196 - Don't return children columns in layout tables. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D95228